2011-11-11  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #31764: Prices should show the corresponding form name

2011-11-10  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.3
	* [BUGFIX] #31728: Exception when using custom form URLs in Dir
	* [BUGFIX] #31727: Non-English localization files are wrongly referenced

2011-11-09  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.2
	* [BUGFIX] #31689: Incompatibility between WS v1 and WS v2

2011-11-06  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.1

2011-11-02  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Change default WSDL version to 2.0

2011-10-26  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #31313: Prices are not rendered correctly

2011-10-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove translation files (now managed on http://translation.typo3.org)

2011-10-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Get rid of phantom chapter at the end of the document

2011-10-13  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Fix paragraph styles for better HTML rendering on typo3.org

2011-10-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.0

2011-10-02  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Set default WSDL version to 1.0

2011-09-19  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #30007: Caching is much less efficient in TYPO3 4.6

2011-09-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Update jQuery reference

2011-09-08  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Simplify retrieval of labels in new CE wizards

2011-08-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Use an official version number
	* [TASK] Split locallang*.xml into <langKey>.locallang*.xml files

2011-08-24  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #29207: Cleanup task crashes if web service does not exist
	* [TASK] Reintroduce subcategory "API" in Extension Manager
