@@ -162,6 +162,7 @@ $<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/
 			<div class="adr">
 				<span class="type" style="display:none">Work</span>
 				<div class="tx_egovapi_block_contact_address street-address">###SERVICE_CONTACT_ADDRESS###</div>
+				<div class="tx_egovapi_block_contact_poBox post-office-box">###SERVICE_CONTACT_PO_BOX###</div>
 				<span style="display:none">
 					<abbr title="Switzerland" class="country-name">CH</abbr> -
 				</span>
