@@ -1,5 +1,6 @@
 2011-11-11  Xavier Perseguers  <xavier@causal.ch>
 
+	* [FEATURE] #31747: Add postal office box in default template
 	* [FEATURE] #31764: Prices should show the corresponding form name
 
 2011-11-10  Xavier Perseguers  <xavier@causal.ch>
